chore: update project configuration files
- Update .gitignore to exclude development artifacts
- Update README.md with latest project information
- Update ModConfig with improved configuration handling
- Update CooldownManager for better performance
- Fix Placeholders formatting and add missing newline

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>